<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
        android:layout_margin="@dimen/value_10"
    android:gravity="center">

    <TextView
        android:id="@+id/textDigitalTimeToBerlinTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_digital_time_to_berlin_time"
        style="@android:style/TextAppearance.Medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_10"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonSeconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_50"
                android:background="@drawable/red_circle"
                android:enabled="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonHoursFiveOne"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonHoursFiveTwo"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonHoursFiveThree"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonHoursFiveFour"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonHoursOneOne"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonHoursOneTwo"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonHoursOneThree"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonHoursOneFour"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonMinutesFiveOne"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveTwo"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveThree"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveFour"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveFive"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveSix"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveSeven"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveEight"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveNine"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/red_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveTen"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesFiveEleven"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonMinutesOneOne"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesOneTwo"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesOneThree"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />

                <Button
                    android:id="@+id/buttonMinutesOneFour"
                    style="@android:style/Widget.Button"
                    android:layout_width="@dimen/value_0"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/value_10"
                    android:layout_weight="1"
                    android:background="@drawable/yellow_button_selector"
                    android:enabled="false" />
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/value_10"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputDigitalTimeHours"
            android:layout_width="@dimen/value_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/value_10"
            android:hint="@string/text_hours"
            android:gravity="center"
            android:textSize="@dimen/text_20"
            android:autofillHints="@string/text_hours"
            android:inputType="time" />

        <EditText
            android:id="@+id/inputDigitalTimeMinutes"
            android:layout_width="@dimen/value_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/value_10"
            android:hint="@string/text_minutes"
            android:gravity="center"
            android:textSize="@dimen/text_20"
            android:autofillHints="@string/text_minutes"
            android:inputType="time" />

        <EditText
            android:id="@+id/inputDigitalTimeSeconds"
            android:layout_width="@dimen/value_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/value_10"
            android:hint="@string/text_seconds"
            android:gravity="center"
            android:textSize="@dimen/text_20"
            android:autofillHints="@string/text_seconds"
            android:inputType="time" />

    </LinearLayout>

        <Button
            android:id="@+id/buttonConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/value_10"
            android:background="@drawable/red_button_selector"
            android:text="@string/text_convert" />

    </LinearLayout>

</ScrollView>